@@ -13,6 +13,11 @@ v0.1.2.a1
    * Tag
    * Note
    * ImageFormat
+   * Status
+   * StatusList
+
+ * Empty :class:`~stalker.core.models.StatusList`\ s are now allowed. The
+   validation overhead is left to the SOM user.
 
 v0.1.1.a10
 ----------
